# settings_manager

./: Cargo.toml  README.rst
src/: common.rs  common_test.rs  lib.rs  prelude.rs  project_settings.rs  project_settings_test.rs  settings.rs  settings_test.rs  system_settings.rs  system_settings_test.rs  user_settings.rs
