[package]
name = "settings_mangager"
version = "0.0.1-init"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Settings manager."
license = 'GPL-3.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2"
tempfile = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0"
cluFlock = "1.2.7"
config = "0.12"

[dev-dependencies]
rand = "0.8"
fake = "2.4"
